gatekeeper/policy/block-wildcard-ingress/tests/missing-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: example
                port:
                  number: 80
